--- a/furfuturefunding/src/components/OpportunityCard.css
+++ b/furfuturefunding/src/components/OpportunityCard.css
@@ -1,3 +1,13 @@
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.card h2 {
+  color: inherit;
+  text-decoration: none;
+}
+
 .card {
   background-color: #FF914D;
   border-radius: 0.5rem;
@@ -29,17 +39,18 @@
   margin-right: 1rem;
   max-width: 1000px;
 }
+
 .opportunities-container {
-  margin-left: 50px; 
+  margin-left: 50px;
   padding: 20px;
 }
 
 
 @media (min-width: 1400px) {
   .opportunities-title {
-    margin-right:25rem;
+    margin-right: 25rem;
   }
-  
+
   .opportunities-grid {
     margin-right: 20rem;
     grid-template-columns: repeat(3, 1fr);
@@ -52,7 +63,7 @@
   .opportunities-title {
     margin-right: 9rem;
   }
-  
+
   .opportunities-grid {
     margin-right: 1rem;
   }
@@ -105,7 +116,7 @@
   font-size: 1.25rem;
   font-weight: 600;
   margin-top: 10px;
-  
+
 }
 
 .info-row {
@@ -138,7 +149,7 @@
 }
 
 .tag {
-  background-color: #130265;
+  background-color: #056060;
   padding: 0.25rem 0.75rem;
   border-radius: 9999px;
   font-size: 0.875rem;
@@ -167,22 +178,22 @@
     margin-left: 5rem;
     padding: 1rem;
   }
- 
+
   .opportunities-title {
     margin-left: 15rem;
     font-size: 1.8rem;
   }
- 
+
   .card {
     padding: 1rem;
   }
- 
+
   .header-section h2 {
     font-size: 1.5rem;
   }
- }
- 
- @media screen and (max-width: 375px) {
+}
+
+@media screen and (max-width: 375px) {
   .opportunities-grid {
     grid-template-columns: 1fr;
     margin: 0;
@@ -219,7 +230,8 @@
     text-align: center;
   }
 
-  .info-row, .tag {
+  .info-row,
+  .tag {
     font-size: 0.8rem;
   }
 }
