--- a/furfuturefunding/src/components/LoginForm.css
+++ b/furfuturefunding/src/components/LoginForm.css
@@ -33,7 +33,7 @@
   width: 100%;
   max-width: 500px;
   padding: 2rem;
-  background: white;
+  background: #f5f5f5;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
   border: 2px solid #000000;
   border-radius: 8px;
@@ -52,7 +52,7 @@
 .login-form-group,
 .form-group {
   margin-bottom: 2rem;
-  
+
 }
 
 .form-group input:first-child {
@@ -62,7 +62,7 @@
 input[type="text"],
 input[type="password"],
 input[type="email"] {
-  width: 90%;
+  width: 27rem;
   padding: 1rem;
   border: 2px solid #ddd;
   border-radius: 8px;
@@ -73,7 +73,8 @@ input[type="email"] {
 }
 
 .primary-button {
-  width: 80%;
+  width: 27rem;
+  height: 3rem;
   padding: 0.75rem;
   background-color: #1a0f4d;
   color: white;
@@ -87,16 +88,17 @@ input[type="email"] {
 .primary-button:hover {
   background-color: #FF914D;
   transform: translateY(-2px);
-  color: #000000;
+  color: #f5f5f5;
 }
 
 .secondary-button {
-  width: 80%;
+  width: 27rem;
+  height: 3rem;
   padding: 0.75rem;
   background-color: #1a0f4d;
   color: white;
   border: none;
-  border-radius: 8px;
+  border-radius: 4px;
   display: block;
   margin: 0 auto;
 }
@@ -109,20 +111,19 @@ input[type="email"] {
 
 /* Mobile styles */
 @media (max-width: 375px) {
-  
- 
+
   .login-container {
     width: 85%;
     padding: 1.5rem;
     margin: 0;
     height: auto;
   }
- 
+
   .cat-container {
     top: -40px;
     right: -10px;
   }
- 
+
   .cat-icon {
     height: 80px;
   }
