--- a/furfuturefunding/src/components/AboutUs.css
+++ b/furfuturefunding/src/components/AboutUs.css
@@ -1,12 +1,13 @@
 /* AboutUs.css */
 .about-section {
-  min-height: 100vh;
+  min-height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 2rem;
   position: relative;
-  background-image: url('/src/assets/orange_swirl.png');
+  background-image: url(../assets/orange_swirl.png);
+  margin-top: 10px;
 }
 .swirl-background {
   position: absolute;
@@ -29,7 +30,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(80, 22, 22, 0.5);
   z-index: 1;
 }
 
@@ -72,7 +73,6 @@
   border-radius: 8px;
   padding: 1rem;
   text-align: center;
-
 }
 
 
@@ -99,6 +99,7 @@
   margin-top: -1rem;
   max-width: 100%;
   height: 320px;
+  background-color: #f5f5f5;
  }
  
  .member-info p.position {
