--- a/furfuturefunding/src/components/Footer.css
+++ b/furfuturefunding/src/components/Footer.css
@@ -8,6 +8,7 @@
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 20px;
+    
 }
 
 .custom-row {
@@ -26,14 +27,14 @@
 
 .custom-col h6 {
     font-size: 1.5rem;
-    margin-bottom: 10px; /* Adjusted spacing */
+    margin-bottom: 10px; 
     margin-left: 85px;
 }
 
 /* About Section Styling */
 .about-sectionfooter {
-    width: 100%; /* Adjust the width to be responsive */
-    height: 140px; /* Allow the height to adjust dynamically */
+    width: 100%; 
+    height: 140px; 
     font-size: 1rem;
     line-height: 1.5;
     padding: 12px; 
@@ -46,24 +47,24 @@
 }
 
 .about-section::before {
-    display: none; /* Removes the unnecessary background overlay */
+    display: none; 
 }
 
 /* Footer Links */
 .custom-footer-links {
     list-style: none;
     padding: 0;
-    margin-right: -30rem; /* Adjust the alignment */
+    margin-right: -30rem; 
 }
 
 .custom-footer-links ul {
-    list-style: none; /* Remove default bullets */
+    list-style: none; 
     padding: 0;
     margin-left: 90px;
 }
 
 .custom-footer-links li {
-    list-style: none; /* Remove any remaining bullets */
+    list-style: none; 
     margin-bottom: 5px;
 }
 
