--- a/furfuturefunding/src/components/OrganisationCard.css
+++ b/furfuturefunding/src/components/OrganisationCard.css
@@ -1,14 +1,21 @@
 .organisation-card {
   width: 300px;
   align-self: flex-end;
-  background-color: #f8f8f8;
+  background-color: #FF914D;
   border-radius: 8px;
   padding: 1.5rem;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
   border: 2px solid black;
   margin-left: 55rem;
-  margin-top:-33.5rem;
+  margin-top:-45rem;
 }
+
+
+.organisation-card img {
+  border: 2px solid #FF914D;
+  border-radius: 8px;
+}
+
 
 .organisation-logo {
   width: 80px;
