--- a/furfuturefunding/src/components/ContactForm.css
+++ b/furfuturefunding/src/components/ContactForm.css
@@ -48,9 +48,14 @@
   margin-bottom: 0.5rem;
 }
 
-.contact-form .contact-form-group {
+/* .contact-form .contact-form-group {
   width: 48%;
-  margin-bottom: 0; /* Override the login form margin */
+  margin-bottom: 0; 
+} */
+
+.contact-form .contact-form-group {
+  width: 100%; /* Ensure the form group spans the full width */
+  box-sizing: border-box; /* Prevent padding from affecting width */
 }
 
 .contact-form .contact-form-group label {
@@ -66,14 +71,25 @@
 }
 
 .contact-form .contact-form-group input,
-.contact-form .contact-form-group select,
 .contact-form .contact-form-group textarea {
   width: 100%;
+
   padding: 1rem;
   border: 1px solid #e5e5e5;
   border-radius: 4px;
   font-size: 1rem;
   background-color: #f8f8f8;
+}
+
+.contact-form .contact-form-group select {
+  width: 100%; /* Make select take up the full width */
+  padding: 1rem;
+  border: 1px solid #e5e5e5;
+  border-radius: 4px;
+  font-size: 1rem;
+  background-color: #f8f8f8;
+  box-sizing: border-box;
+  margin-bottom: 0.5rem;
 }
 
 .contact-form .contact-form-group input:focus,
@@ -87,8 +103,8 @@
 
 .contact-form .contact-form-group textarea {
   height: 100px;
-  width: 525px;
   resize: vertical;
+  margin-bottom: 1.5rem;
 }
 
 .contact-form button[type="submit"] {
