--- a/furfuturefunding/src/components/AboutUs.css
+++ b/furfuturefunding/src/components/AboutUs.css
@@ -1,40 +1,24 @@
 /* AboutUs.css */
-.about-section {
-  min-height: 80vh;
+.about-section-members {
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 2rem;
   position: relative;
-  background-color: #f5f5f5;
-  margin-top: 10px;
+  background-color: white;
+  margin-top: 80px;
 }
 
-.swirl-background {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 90%;
-  height: 120%;
-  background-image: url('/src/img/orange_swirl.png');
-  /* Replace with actual swirl image */
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  transform: translate(-50%, -50%);
-  z-index: -1;
-  /* Keeps it behind the team members */
-}
 
-.about-section::before {
-  content: '';
+.top-swirl-image {
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(80, 22, 22, 0.5);
-  z-index: 1;
+  top: 8rem;
+  left: 2rem;
+  width: 300rem;
+  height: auto;
+  object-fit: cover;
+  z-index: 0;
 }
 
 .about-section>* {
@@ -42,9 +26,13 @@
   z-index: 3;
 }
 
-.about-section h1 {
-  font-size: 2.5rem;
-  margin-top: 6rem;
+.about-container {
+  height: 10%;
+}
+
+.about-section-members h1 {
+  font-size: 3.5rem;
+  margin-top: 2rem;
   color: #130265;
   text-align: center;
   padding: 1rem;
@@ -52,7 +40,7 @@
   width: fit-content;
 }
 
-.about-section p {
+.about-section-members p {
   font-size: 1rem;
   margin-top: -2rem;
   margin-bottom: 0.5rem;
@@ -70,12 +58,14 @@
   max-width: 1400px;
   width: 100%;
   align-items: start;
+  z-index: 2
 }
 
 .team-member {
   border-radius: 8px;
   padding: 1rem;
   text-align: center;
+  z-index: 2
 }
 
 
@@ -103,12 +93,13 @@
   max-width: 100%;
   height: 320px;
   background-color: #f5f5f5;
+  line-height: 0.5px;
 }
 
 .member-info p.position {
-  font-size: 1rem;
+  font-size: 1.2rem;
   color: #130265;
-  margin-top: 0;
+  margin-top: 10px;
   padding: 0;
   line-height: 1;
   display: flex;
@@ -122,6 +113,7 @@
   margin-bottom: 40px;
   line-height: 1;
   text-align: center;
+  color: black;
 
 }
 
@@ -131,6 +123,7 @@ p.bio {
   font-size: 0.85rem;
   line-height: 1.2;
   text-align: left;
+  color: black;
 }
 
 
@@ -169,9 +162,16 @@ p.bio {
   .member-info {
     max-height: 230px;
   }
+  .top-swirl-image{
+    display: none;
+  }
 }
 
 @media (max-width: 375px) {
+  .top-swirl-image{
+    display: none;
+  }
+  
   .about-section {
     padding: 0.5rem;
   }
