--- a/furfuturefunding/src/components/SignUpForm.css
+++ b/furfuturefunding/src/components/SignUpForm.css
@@ -1,6 +1,5 @@
 .background-pattern-signup {
     position: absolute;
-    top: 50;
     left: 0;
     width: 100%;
     height: 300%;
@@ -91,6 +90,17 @@ h1 {
     margin-bottom: 0.5rem;
 }
 
+
+@media (max-width: 768px) {
+    .signup-container {
+        width: 90%;
+    }
+
+    .cat-container-signup {
+        display: none;
+    }
+}
+
 @media (max-width: 375px) {
     .signup-container {
         width: 85%;
@@ -118,14 +128,9 @@ h1 {
     .signup-container {
         margin-top: 3rem;
     }
-}
 
-@media (max-width: 768px) {
-    .signup-container {
-        width: 90%;
-    }
-
-    .catmascot {
+    .cat-container-signup {
         display: none;
     }
+
 }
