--- a/furfuturefunding/src/components/ContactForm.css
+++ b/furfuturefunding/src/components/ContactForm.css
@@ -1,6 +1,7 @@
 .contact-page {
   min-height: 100vh;
-
+  margin-top: 60px;
+  background-image: url("src/img/ramcats_1.png");
   position: relative;
   overflow: hidden;
   z-index: 0; /* Added to ensure proper stacking */
@@ -134,7 +135,6 @@
 
 /* Media Queries */
 @media (max-width: 768px) {
-
   .contact-container {
     width: 90%;
     margin: 6rem auto;
@@ -185,4 +185,3 @@
     margin-bottom: 1rem;
   }
 }
-
