--- a/furfuturefunding/src/components/LoginForm.css
+++ b/furfuturefunding/src/components/LoginForm.css
@@ -1,8 +1,13 @@
+.login-page {
+  min-height: 100vh;
+  background-image: url("src/img/ramcats_1.png");
+  position: relative;
+  overflow: hidden;
+  z-index: 0; /* Added to ensure proper stacking */
+}
 
-.cat-icon-login{
+.cat-icon-login {
   height: 180px;
- 
- 
 }
 
 .cat-container-login {
@@ -17,34 +22,17 @@
   padding-right: 2rem;
 }
 
-
-.login-background {
-  background-image: url("src/img/ramcats_1.png");
-  background-size: cover;
-  background-position: center;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 1rem;
-  overflow: hidden;
-  position: fixed;
-  top: 0;
-  left: 0;
-}
-
 .login-container {
-  width: 100%;
-  max-width: 500px;
-  padding: 2rem;
-  background: #f5f5f5;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-  border: 2px solid #000000;
+  max-width: 600px;
+  background: white;
+  border: 1px solid #e5e5e5;
   border-radius: 8px;
+  padding: 2rem;
+  margin: 180px auto 0; /* Adjust top margin if necessary */
   position: relative;
-
-  margin-top: 9rem;
+  z-index: 1;
+  top: 70px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
 }
 
 .login-title {
@@ -55,9 +43,9 @@
   font-weight: bold;
 }
 
-.login-form-group,
-.form-group {
-  margin-bottom: 2rem;
+.login-form-group {
+  width: 100%; /* Ensure the form group spans the full width */
+  box-sizing: border-box;
 }
 
 .form-group input:first-child {
@@ -67,7 +55,7 @@
 .form-group input[type="text"],
 .form-group input[type="password"],
 .form-group input[type="email"] {
-  width: 27rem;
+  width: 100%; /* Make input take up full available width */
   padding: 1rem;
   border: 2px solid #ddd;
   border-radius: 8px;
@@ -114,28 +102,12 @@
   color: #000000;
 }
 
-
-.page-container {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-.main-content-login {
-  flex: 1 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 2rem;
-  margin-bottom: 0rem;
-}
 /* Mobile styles */
 @media (max-width: 375px) {
   .login-container {
-    width: 85%;
+    width: 90%;
+    margin: 6rem auto;
     padding: 1.5rem;
-    margin: 0;
-    height: auto;
   }
 
   .cat-container {
