--- a/furfuturefunding/src/components/LoginForm.css
+++ b/furfuturefunding/src/components/LoginForm.css
@@ -19,7 +19,7 @@
 
 
 .login-background {
-  background-image: url("src/img/ramcats_1.png");
+  /* background-image: url("src/img/ramcats_1.png"); */
   background-size: cover;
   background-position: center;
   width: 100vw;
